@@ -1,6 +1,8 @@
 # Offpunk History
 
 ## 1.3 - Unreleased
+- New behaviour for "find" (or "/") which is to grep through current page (ripgrep used if detected)
+- Default width set to 80 as many gopherhole and gemini capsule have it hardcoded
 - Streaming URL without valid content-length are now closed after 5Mo of download (thanks to Eoin Carney for reporting the issue)
 - Fixed a crash when the cache is already a dir inside a dir.
 
